[package]
name = "thomas"
version = "0.1.0"
edition = "2024"

[dependencies]
sha3 = "0.10" # For SHA-3 hashing
hex = "0.4" # Hex encoding for hashes
serde = { version = "1.0", features = ["derive"] } # Serialization
serde_json = "1.0" # JSON for data structs
aes-gcm = "0.10" # AES-GCM encryption
rand = "0.8" # Random key/nonce generation